--- a/index.html
+++ b/index.html
@@ -122,6 +122,130 @@
 			  	</tr>
 			  </table>	
 		  </div>
+
+		  <!-- Testing for WR's -->
+		  <div id="wr-results" class="table-results">
+			  <table class="table">
+			  	<thead>
+			  		<h3>Wide Receivers This Week</h3>
+				 	<tr>
+				 		<th>Ranking</th>
+					  	<th>Player Name</th>
+					  	<th>Standard</th>
+					  	<th>Standard High</th>
+					  	<th>Standard Low</th>
+					  	<th>PPR</th>
+					  	<th>PPR High</th>
+					  	<th>PPR Low</th>
+					  	<th>Team</th>
+			  		</tr>
+			  	</thead>
+			  	<tr ng-repeat="player in topWRs.Rankings">
+			  		<td>{{$index + 1}}</td>
+			  		<td>{{player.name}}</td>
+			  		<td>{{player.standard}}</td>
+			  		<td>{{player.standardHigh}}</td>
+			  		<td>{{player.standardLow}}</td>
+			  		<td>{{player.ppr}}</td>
+			  		<td>{{player.pprHigh}}</td>
+			  		<td>{{player.pprLow}}</td>
+			  		<td>{{player.team}}</td>
+			  	</tr>
+			  </table>	
+		  </div>
+
+		  <!-- Testing for TE's -->
+		  <div id="te-results" class="table-results">
+			  <table class="table">
+			  	<thead>
+			  		<h3>Tight Ends This Week</h3>
+				 	<tr>
+				 		<th>Ranking</th>
+					  	<th>Player Name</th>
+					  	<th>Standard</th>
+					  	<th>Standard High</th>
+					  	<th>Standard Low</th>
+					  	<th>PPR</th>
+					  	<th>PPR High</th>
+					  	<th>PPR Low</th>
+					  	<th>Team</th>
+			  		</tr>
+			  	</thead>
+			  	<tr ng-repeat="player in topTEs.Rankings">
+			  		<td>{{$index + 1}}</td>
+			  		<td>{{player.name}}</td>
+			  		<td>{{player.standard}}</td>
+			  		<td>{{player.standardHigh}}</td>
+			  		<td>{{player.standardLow}}</td>
+			  		<td>{{player.ppr}}</td>
+			  		<td>{{player.pprHigh}}</td>
+			  		<td>{{player.pprLow}}</td>
+			  		<td>{{player.team}}</td>
+			  	</tr>
+			  </table>	
+		  </div>
+
+		  <!-- Testing for DEF's -->
+		  <div id="def-results" class="table-results">
+			  <table class="table">
+			  	<thead>
+			  		<h3>D/STs This Week</h3>
+				 	<tr>
+				 		<th>Ranking</th>
+					  	<th>Player Name</th>
+					  	<th>Standard</th>
+					  	<th>Standard High</th>
+					  	<th>Standard Low</th>
+					  	<th>PPR</th>
+					  	<th>PPR High</th>
+					  	<th>PPR Low</th>
+					  	<th>Team</th>
+			  		</tr>
+			  	</thead>
+			  	<tr ng-repeat="player in topDEFs.Rankings">
+			  		<td>{{$index + 1}}</td>
+			  		<td>{{player.name}}</td>
+			  		<td>{{player.standard}}</td>
+			  		<td>{{player.standardHigh}}</td>
+			  		<td>{{player.standardLow}}</td>
+			  		<td>{{player.ppr}}</td>
+			  		<td>{{player.pprHigh}}</td>
+			  		<td>{{player.pprLow}}</td>
+			  		<td>{{player.team}}</td>
+			  	</tr>
+			  </table>	
+		  </div>
+
+		  <!-- Testing for K's -->
+		  <div id="k-results" class="table-results">
+			  <table class="table">
+			  	<thead>
+			  		<h3>Kickers This Week</h3>
+				 	<tr>
+				 		<th>Ranking</th>
+					  	<th>Player Name</th>
+					  	<th>Standard</th>
+					  	<th>Standard High</th>
+					  	<th>Standard Low</th>
+					  	<th>PPR</th>
+					  	<th>PPR High</th>
+					  	<th>PPR Low</th>
+					  	<th>Team</th>
+			  		</tr>
+			  	</thead>
+			  	<tr ng-repeat="player in topKs.Rankings">
+			  		<td>{{$index + 1}}</td>
+			  		<td>{{player.name}}</td>
+			  		<td>{{player.standard}}</td>
+			  		<td>{{player.standardHigh}}</td>
+			  		<td>{{player.standardLow}}</td>
+			  		<td>{{player.ppr}}</td>
+			  		<td>{{player.pprHigh}}</td>
+			  		<td>{{player.pprLow}}</td>
+			  		<td>{{player.team}}</td>
+			  	</tr>
+			  </table>	
+		  </div>
 	  	</div>
 	</body>
 </html>
